@@ -7,6 +7,40 @@ import (
 	"github.com/stretchr/testify/assert"
 )
 
+func TestTimeout(t *testing.T) {
+	// Mocknotonic time:
+	fakeTimeCh := make(chan int64)
+	go func() {
+		fakeTime := time.Now().Unix()
+		for {
+			fakeTime++
+			fakeTimeCh <- fakeTime
+		}
+	}()
+
+	now = func() time.Time {
+		return time.Unix(<-fakeTimeCh, 0)
+	}
+
+	// Blocking sleep:
+	sleepCh := make(chan struct{})
+	sleep = func(time.Duration) {
+		<-sleepCh
+	}
+
+	test := newValueMap(1 * time.Second)
+
+	test.Set("foo", 3.14)
+
+	// Let cleanup do its job
+	sleepCh <- struct{}{}
+	sleepCh <- struct{}{}
+	sleepCh <- struct{}{}
+
+	// Check it expired
+	assert.Equal(t, 0.0, test.Get("foo"))
+}
+
 func TestValueMap(t *testing.T) {
 	test := newValueMap(defaultTimeout)
 
@@ -28,17 +62,6 @@ func TestGetWithDefault(t *testing.T) {
 	// Defined value
 	test.Set("foo", 38.2)
 	assert.Equal(t, 38.2, test.GetWithDefault("foo", 3.14))
-}
-
-func TestTimeout(t *testing.T) {
-	test := newValueMap(10 * time.Millisecond)
-
-	test.Set("foo", 3.14)
-	assert.Equal(t, 3.14, test.Get("foo"))
-
-	// expired:
-	time.Sleep(60 * time.Millisecond)
-	assert.Equal(t, 0.0, test.Get("foo"))
 }
 
 func TestContainerUID(t *testing.T) {
